<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="org.go.sopt.winey.presentation.model.WineyDialogLabel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_gray_fill_12_rect"
        android:elevation="0dp"
        android:paddingHorizontal="14dp"
        android:paddingBottom="16dp"
        android:stateListAnimator="@null">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.WINEY.body_b_18"
            android:textColor="@color/gray_900"
            android:text="@{data.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/alert_title" />

        <TextView
            android:id="@+id/tv_dialog_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.WINEY.detail_m_13"
            android:textColor="@color/gray_500"
            android:text="@{data.subTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
            tools:text="@string/alert_subtitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_negative"
            android:layout_width="124dp"
            android:layout_height="52dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_gray_fill_5_rect"
            android:stateListAnimator="@null"
            android:textAppearance="@style/TextAppearance.WINEY.body_m_16"
            android:textColor="@color/gray_500"
            android:text="@{data.negativeButtonLabel}"
            app:layout_constraintEnd_toStartOf="@id/btn_dialog_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_sub"
            tools:text="@string/alert_btn1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_positive"
            android:layout_width="124dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_yellow_fill_5_rect"
            android:stateListAnimator="@null"
            android:textAppearance="@style/TextAppearance.WINEY.body_m_16"
            android:textColor="@color/gray_900"
            android:text="@{data.positiveButtonLabel}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dialog_negative"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_sub"
            tools:text="@string/alert_btn2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
