<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.feed.upload.ContentFragment">

        <TextView
            android:id="@+id/tv_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/upload_content_title"
            android:textAppearance="@style/TextAppearance.WINEY.Headline_b_24_xxl"
            android:textColor="@color/gray_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_content_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/upload_content_detail"
            android:textAppearance="@style/TextAppearance.WINEY.body_m_16"
            android:textColor="@color/gray_400"
            app:layout_constraintStart_toStartOf="@id/tv_content_title"
            app:layout_constraintTop_toBottomOf="@id/tv_content_title" />

        <EditText
            android:id="@+id/et_upload_content"
            style="@style/Widget.Winey.EditText"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/sel_upload_content_edittext_stroke_color"
            android:gravity="top"
            android:hint="@string/upload_content_edittext_hint"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine"
            android:padding="18dp"
            android:textAppearance="@style/TextAppearance.WINEY.body_m_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content_detail" />

        <TextView
            android:id="@+id/tv_content_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="28dp"
            android:text="@string/upload_content_counter"
            android:textAppearance="@style/TextAppearance.WINEY.body_m_14"
            android:textColor="@color/gray_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_upload_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>